--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div>
             <section class="second_section"><h2>Nos Contate </h2>
-                <p>Com a DZR você pode ficar tranquilo, <a href="#">nos contate </a>  para realizarmos seu desejo de moda.</p>
+                <p>Com a DZR você pode ficar tranquilo, <a href="https://w.app/dazarea">nos contate </a>  para realizarmos seu desejo de moda.</p>
                     <br><br>        
                 </section></div>
         <!--QUALIDADES-->
